# jansiokernel

./: README.md  pyproject.toml
example/: example.ipynb
jansiokernel/: kernel.json
src/jansiokernel/: __main__.py  install_kernelspec.py  kernel.py
